scripts/e2e/cmd/runner/testdata/extensions-v1beta1/one-namespace-one-ingress/empty-secret/empty-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: testsecret-tls
type: kubernetes.io/tls
data:
  tls.crt: ""
  tls.key: ""
